# brainiac

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.claude/skills/brainiac-capture/: SKILL.md
.claude/skills/brainiac-housekeep/: SKILL.md
.claude/skills/brainiac-recall/: SKILL.md
.claude/skills/brainiac-review/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: MAINTAINING.md
docs/superpowers/plans/: 2026-05-20-phase-0-foundation.md  2026-05-20-phase-1-associative-recall.md  2026-05-20-phase-3-sm2-spaced-repetition.md  2026-05-20-phase-4-working-memory-strict-types.md  2026-05-20-phase-5-actr-activation.md  2026-05-20-phase-6-spreading-activation.md  2026-05-20-phase-7-probabilistic-consolidation.md  2026-05-20-phase-8-atkinson-shiffrin-states.md
docs/superpowers/specs/: 2026-05-20-brainiac-memory-design.md  2026-05-20-phase-5-actr-activation-design.md  2026-05-20-phase-6-spreading-activation-design.md  2026-05-20-phase-7-probabilistic-consolidation-design.md  2026-05-20-phase-8-atkinson-shiffrin-states-design.md
scripts/: install.sh  update.sh
tools/brainiac/: pyproject.toml
tools/brainiac/brainiac/: cli.py  mcp_server.py
tools/brainiac/brainiac/core/: activation.py  classifier.py  config.py  consolidate.py  decay.py  embeddings.py  events.py  graph.py  index.py  models.py  note.py  novelty.py  paths.py  sensory.py  sm2.py  spreading.py  states.py  working_memory.py
tools/brainiac/tests/: conftest.py  test_cli.py  test_mcp_server.py  test_smoke_e2e.py
tools/brainiac/tests/core/: test_activation.py  test_classifier.py  test_config.py  test_consolidate.py  test_decay.py  test_embeddings.py  test_graph.py  test_index.py  test_index_vec.py  test_models.py  test_note.py  test_novelty.py  test_paths.py  test_recall.py  test_sensory.py  test_sm2.py  test_spreading.py  test_states.py  test_working_memory.py
