[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainiac"
version = "0.1.0"
description = "Cognitive memory system — Phase 0 foundation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2",
    "python-frontmatter>=1.1",
    "click>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
brainiac = "brainiac.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["brainiac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=brainiac --cov-report=term-missing"

[tool.coverage.run]
branch = true
omit = ["brainiac/mcp_server.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
