[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainiac"
version = "0.1.0"
description = "Cognitive memory system for AI agents — Atkinson-Shiffrin model + Ebbinghaus decay + ACT-R activation + SuperMemo-2 + probabilistic consolidation. MCP server in Markdown files."
readme = "../../README.md"
license = { text = "MIT" }
authors = [
    { name = "Ueslei Nascimento" },
]
keywords = ["mcp", "memory", "knowledge-base", "cognitive-science", "embeddings", "sqlite", "claude", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Database",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2",
    "python-frontmatter>=1.1",
    "click>=8",
    "sentence-transformers>=2.7",
    "sqlite-vec>=0.1.6",
    "numpy>=2.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
brainiac = "brainiac.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["brainiac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=brainiac --cov-report=term-missing"
markers = ["slow: tests que carregam o modelo de embeddings (>3s)"]

[tool.coverage.run]
branch = true
omit = ["brainiac/mcp_server.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
